--- a/Ecu911/Pages/ChangePassword.razor
+++ b/Ecu911/Pages/ChangePassword.razor
@@ -32,12 +32,12 @@
 </EditForm>
 
 @code {
-    ChangePasswordRequest request = new();
+    private ChangePasswordRequest request = new();
 
-    MudTextField<string> password;
-    string confirmedPassword = "";
+    private  MudTextField<string> password;
+    private  string confirmedPassword = "";
 
-    string currentPassword = "";
+    private  string currentPassword = "";
 
 
     private IEnumerable<string> PasswordStrength(string pw)
