--- a/Ecu911/Pages/EliminarUsuario.razor
+++ b/Ecu911/Pages/EliminarUsuario.razor
@@ -24,8 +24,8 @@
 
 @code {
 
-    List<User> Usuarios = new();
-    string UsuarioId = null;
+    private List<User> Usuarios = new();
+    private string UsuarioId = null;
     private bool coerceText;
     private bool coerceValue;
 
