--- a/Ecu911/Shared/MainLayout.razor
+++ b/Ecu911/Shared/MainLayout.razor
@@ -41,6 +41,6 @@
     }
 
     public void LogOut(){
-        ((CustomAuthenticationStateProvider)authProvider).SetUserAsLoggedOut();
+        ((CustomAuthenticationStateProvider)authProvider).SetUserAsAuLoggedOut();
     }
 }
