--- a/Ecu911/App.razor
+++ b/Ecu911/App.razor
@@ -8,8 +8,9 @@
             <CascadingAuthenticationState>
             <LayoutView Layout="@typeof(MainLayout)">
                 <h1>404 Error</h1>
-                <p role="alert">Sorry, there's nothing at this address.</p>
+                <p role="alert">>Lo sentimo, La URL a la que intenta acceder no existe.</p>
                 </LayoutView>
             </CascadingAuthenticationState>
         </NotFound>
-</Router>
+</Router> 
+
