--- a/Ecu911/Pages/CrearUsuario.razor
+++ b/Ecu911/Pages/CrearUsuario.razor
@@ -25,10 +25,10 @@
 </EditForm>
 @code {
 
-    UserRegisterRequest registro = new();
+    private UserRegisterRequest registro = new();
 
-    List<string> Roles = new();
-    string newPassword;
+    private List<string> Roles = new();
+    private string newPassword;
 
     UserValidator<string> userNameValidator = new UserValidator<string>(x => x
         .NotEmpty().WithMessage("Ingrese un Nombre")
