--- a/Ecu911/Pages/EtapaContractual.razor
+++ b/Ecu911/Pages/EtapaContractual.razor
@@ -1,5 +1,8 @@
 ﻿@page "/etapacontractual"
 @page "/etapacontractual/{Id}"
+
+
+
 <PageTitle>Etapa Contractual</PageTitle>
 <MudText Align="Align.Center" Typo="Typo.h3">Etapa Contractual</MudText>
 <EditForm Model="@registro" >
@@ -12,17 +15,7 @@
     <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
         <MudDatePicker PickerVariant="PickerVariant.Dialog" Label="Finalización del Contrato" @bind-Date="registro.fechaFinalizacion" DateFormat="yyyy-MM-dd"></MudDatePicker>
     </MudContainer>
-
-    <MudContainer Class="d-flex flex-column justify-center" Style="width: 40%;padding:30px">
-        <MudSelect T="string" Placeholder="Selecciona Etapa" @bind-Value="updateproceso.EtapaId" Label="Etapa" AnchorOrigin="Origin.BottomCenter" OnOpen="BuscarEtapa">
-            @foreach (var valor in etapa)
-            {
-
-                <MudSelectItem Value="@valor.EtapaId"> @valor.tipoEtapa </MudSelectItem>
-            }
-        </MudSelect>
-    </MudContainer>
-           
+       
 </EditForm>
 <MudContainer Class="d-flex flex-column justify-center" Style="width: 300px;padding:30px">
     <MudButton  OnClick="Subir" Variant="Variant.Filled" StartIcon="@Icons.Material.Filled.Save" Color="Color.Error" Size="Size.Large">
@@ -34,32 +27,13 @@
 
 
 @code {
-    ProcesoCompra updateproceso = new();
-    List<Etapa> etapa = new();
-    Contractual registro = new();
+    private ProcesoCompra updateproceso = new();
+    private Contractual registro = new();
     private bool _procesando = false;
     [Parameter]
     public string Id { get; set; }
 
-    protected override async Task OnInitializedAsync()
-    {
-        await BuscarEtapa();
-    }
-    private async Task BuscarEtapa()
-    {
-        var response = await apiService.HttpClient.GetAsync("/api/Etapa");
-        try
-        {
-            response.EnsureSuccessStatusCode();
-            etapa = await response.Content.ReadFromJsonAsync<List<Etapa>>();
 
-        }
-        catch (HttpRequestException)
-        {
-            var data = await response.Content.ReadFromJsonAsync<ResponseModel>();
-            snackBar.Add($"{data.Message}", severity: Severity.Error);
-        }
-    }
     protected async void Subir()
     {
         HttpResponseMessage? response = new();
