--- a/Ecu911/_Imports.razor
+++ b/Ecu911/_Imports.razor
@@ -6,20 +6,22 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 
-@using Blazored.SessionStorage;
+
+@*@using Blazored.SessionStorage;*@
 
 @using Microsoft.JSInterop
 @using MudBlazor
 @using Ecu911
 @using Ecu911.Shared
 @using Ecu911.Modelos
+@using Ecu911.Data
 @using Ecu911.Servicios
 @using System.Text.Json;
 @using System.Text.Json.Serialization;
 @using System.Text.Unicode;
 @using System.Net.Http.Json
 @using System.Threading.Tasks
-@inject Blazored.SessionStorage.ISessionStorageService sessionStorage
+
 @using Microsoft.AspNetCore.WebUtilities
 @*@using System.Runtime.dll;*@
 
@@ -33,6 +35,8 @@
 @inject ApiService apiService
 @inject AuthenticationStateProvider authProvider
 @inject NavigationManager navManager
+
+@inject Blazored.LocalStorage.ILocalStorageService sessionStorage
 
 
 @*@inject Servicios.Servicios_Api.Servicios_Api*@
